# md-cpp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Folia.sln  MIGRATION.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  build_app.ps1  build_encoding_test.bat  build_msi.ps1  build_only.bat  build_platform_test.bat  build_test.bat  el-md.sln  probe_ast.bat  refactor-inline-cst-plan.md  setup.ps1
docs/: MARKTEXT_REFERENCE.md  SETTINGS.md  THEMES.md
installer/: Folia.Installer.wixproj  License.rtf  Package.wxs
src/: README.md
src/app-winui/: App.xaml  App.xaml.cpp  App.xaml.h  EditorBlockLayoutCache.cpp  EditorBlockLayoutCache.h  EditorContentPreparation.cpp  EditorContentPreparation.h  EditorDisplayMapping.h  EditorDocumentController.cpp  EditorDocumentController.h  EditorEmbeddedDraw.h  EditorGifDecoder.cpp  EditorGifDecoder.h  EditorInlineImageRenderer.cpp  EditorInlineImageRenderer.h  EditorInteractionMap.cpp  EditorInteractionMap.h  EditorKeyboardController.cpp  EditorKeyboardController.h  EditorPdfPrintJob.cpp  EditorPointerController.cpp  EditorPointerController.h  EditorQuoteBlockRenderer.cpp  EditorQuoteBlockRenderer.h  EditorRenderCache.cpp  EditorRenderCache.h  EditorRenderFrame.h  EditorRenderResources.cpp  EditorRenderResources.h  EditorScrollController.cpp  EditorScrollController.h  EditorSession.cpp  EditorSession.h  EditorSidebarController.cpp  EditorSidebarController.h  EditorStyleSheet.cpp  EditorStyleSheet.h  EditorSurfaceRenderer.cpp  EditorSurfaceRenderer.h  EditorSvgPainter.cpp  (+34 more)
src/app-winui/export/: EditorPdfExportTypes.h  EditorPdfPrintJob.cpp  EditorPdfPrintJob.h
src/app-winui/localization/: Localization.cpp  Localization.h
src/app-winui/media/: AsyncWorkDependency.h  EditorGifDecoder.cpp  EditorGifDecoder.h  MathJaxRenderer.cpp  MathJaxRenderer.h  MathJaxSvgParser.cpp  MathJaxSvgParser.h  MermaidRenderer.cpp  MermaidRenderer.h  SvgNormalizer.cpp  SvgNormalizer.h  TreeSitterHighlighter.cpp  TreeSitterHighlighter.h
src/app-winui/settings/: AppSettings.cpp  AppSettings.h  LatexCommandCatalog.cpp  LatexCommandCatalog.h  LatexCommandStore.h  (+17 more)
src/core/: README.md  ast.ixx  auto_pair.ixx  block_layout.ixx  block_source.ixx  buffer.ixx  callout.ixx  caret.ixx  command.ixx  diagnostics.ixx  document.ixx  document_block_reparse.ixx  document_clipboard.ixx  document_edit.ixx  document_edit_support.ixx  document_footnotes.ixx  document_history.ixx  document_input_rules.ixx  document_operation_apply.ixx  document_position.ixx  document_projection.ixx  document_source_edit.ixx  document_structure_edit.ixx  document_symbols.ixx  document_text.ixx  document_transaction.ixx  editor.ixx  error.ixx  export.ixx  extension.ixx  hit_test.ixx  inline_cst.ixx  inline_document.ixx  inline_parser.ixx  inline_source_edit.ixx  input.ixx  instrumentation.ixx  layout_plan.ixx  layout_tree.ixx  outline.ixx  (+20 more)
src/platform/: README.md  dwrite_factory.ixx  dwrite_measurer.ixx  native_editor_surface.ixx  paint.cpp  paint.h
tests/: README.md  elmd_test.hpp  main.cpp  runner.cpp  test_auto_pair.cpp  test_block_geometry.cpp  test_buffer.cpp  test_display_mapping.cpp  test_document_edit.cpp  test_document_interaction.cpp  test_editor.cpp  test_editor_structural_properties.cpp  test_export.cpp  test_extension.cpp  test_framework.h  test_html_cst.cpp  test_html_inline_presentation.cpp  test_image_metadata.cpp  test_inline_cst.cpp  test_layout_plan.cpp  test_math.cpp  test_outline.cpp  test_parser.cpp  test_reference_standard.cpp  test_render_layout.cpp  test_scheduler.cpp  test_serializer_projection.cpp  test_source_editor.cpp  test_theme.cpp  test_utf.cpp
tests/editing/: test_document_boundaries.cpp  test_document_container_exit.cpp  test_document_edit.cpp  test_document_input.cpp  test_document_interaction.cpp  test_document_operations.cpp  test_document_structure.cpp  test_editor.cpp  test_editor_block_semantics.cpp  test_editor_commands.cpp  test_editor_history.cpp  test_editor_inline.cpp  test_editor_paste.cpp  test_editor_raw_blocks.cpp  test_editor_raw_history.cpp  test_editor_structural_properties.cpp  test_editor_table_properties.cpp  test_editor_tree_history.cpp  test_reference_standard.cpp  test_snippet_template.cpp  test_source_editor.cpp
tests/encoding/: document_encoding_test_support.ixx  test_document_encoding.cpp
tests/foundation/: test_extension.cpp  test_image_metadata.cpp  test_math.cpp  test_scheduler.cpp  test_theme.cpp  test_utf.cpp
tests/parsing/: test_html_cst.cpp  test_inline_cst.cpp  test_parser.cpp  test_parser_blocks.cpp  test_parser_containers.cpp  test_parser_formats.cpp  test_parser_inline.cpp  test_parser_roundtrip.cpp  test_serializer_projection.cpp
tests/platform/: test_block_geometry.cpp  test_display_mapping.cpp  test_editor_input_command.cpp  test_editor_interaction.cpp  test_editor_latex_completion_session.cpp  test_editor_preparation_plan.cpp  test_editor_priority_work_queue.cpp  test_editor_scroll_state.cpp  test_editor_selection_drag_model.cpp  test_editor_shortcut_settings.cpp  test_editor_shortcuts.cpp  test_editor_snippet_session.cpp  test_editor_viewport_plan.cpp
tests/query/: test_document_content_context.cpp  test_latex_command_catalog.cpp  test_latex_completion.cpp  test_rendered_search.cpp  test_rendered_search_edges.cpp  test_search_engine.cpp
tests/rendering/: test_block_geometry.cpp  test_display_mapping.cpp  test_export.cpp  test_html_inline_presentation.cpp  test_layout_plan.cpp  test_outline.cpp  test_render_footnote_html.cpp  test_render_incremental.cpp  test_render_layout.cpp  test_render_layout_hit_test.cpp  test_render_model_basics.cpp  test_render_model_content.cpp  test_render_recursive_flow.cpp
tests/support/: document_edit_test_support.hpp  editor_test_support.hpp  parser_test_support.hpp  render_layout_test_support.hpp
tools/: Generate-WixPayload.ps1  generate-third-party-notices.ps1  list-npm-packages.cjs
tools/mathjax-bundle/: bundle.cjs  entry.cjs  package-lock.json  package.json  quickjs-smoke.bat  quickjs-smoke.cpp
tools/mermaid-bundle/: bundle.cjs  package-lock.json  package.json
(+243 files in other folders)
